--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,9 @@
     <style>
       body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
       }
       .frequency {
         font-size: 24px;
@@ -14,7 +17,7 @@
     </style>
   </head>
   <body>
-    <h1>Hello, World!</h1>
-    <div class="frequency"></div>
+    <!-- <div class="frequency"></div> -->
+    <canvas id="canvas"></canvas>
   </body>
 </html>
